[package]
name = "qldb"
version = "3.2.9"
authors = ["Couragium Solutions <info@couragium.com>"]
edition = "2021"

description="Driver for Amazon's QLDB Database implemented in pure rust."
license = "Apache-2.0/MIT"
readme = "README.md"
keywords = ["QLDB", "amazon", "database", "driver", "async"]
categories = ["database"]
documentation = "https://docs.rs/qldb"
homepage = "https://crates.io/crates/qldb"
repository = "https://github.com/Couragium/qldb-rs"

[dependencies]
ion-binary-rs = "0.8.13"
num-traits = "0.2"
rusoto_qldb_session = { version = "0.48", default_features = false, features = ["rustls", "serialize_structs", "deserialize_structs"] }
rusoto_core = { version = "0.48", default_features = false, features = ["rustls"] }
futures = "0.3"
thiserror = "1"
sha2 = "0.10"
async-channel = "1"
async-executor = "1"
async-io = "1"
eyre = "0.6"
async-compat = "0.2"
async-lock = "2"
log = "0.4"
async-trait = "0.1"

[dev-dependencies]
chrono = "0.4"
async-std = { version = "1", features = ["attributes", "tokio1"] }
bigdecimal = "0.4"
rand = "0.8"
tokio = "1"

[features]
default = ["internal_pool_with_spawner", "internal_pool_with_thread"]
internal_pool_with_spawner = []
internal_pool_with_thread = []
